--- a/demande-aide.css
+++ b/demande-aide.css
@@ -1,231 +1,254 @@
 *{
-    box-sizing: border-box;
-    max-width: 100%;
-    font-family: 'Times New Roman', Times, serif;
+  box-sizing: border-box;
+  font-family: Times New Roman, serif;
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+/* Logo responsive */
+.logo{
+  width: clamp(80px, 20vw, 200px);
+  height: clamp(80px, 20vw, 200px);
+  object-fit: contain;
+}
+
+/* Header responsive */
+.entete {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #fff;
+  padding: 10px 15px;
+  flex-wrap: wrap;
+  position: relative;
+}
+
+.menu-items {
+  display: flex;
+  gap: 25px;
+  align-items: center;
+}
+
+/* Bouton hamburger */
+.menu-toggle {
+  display: none;
+  font-size: 28px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: #00561b;
+  z-index: 1000;
+}
+
+/* Menu responsive */
+@media (max-width: 768px) {
+  .menu-toggle {
+    display: block;
   }
-  body{
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+
+  .menu-items {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: #fff;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    z-index: 999;
+    padding: 10px 0;
+  }
+
+  .menu-items a {
+    padding: 15px 20px;
+    border-bottom: 1px solid #eee;
+    display: block;
+    width: 100%;
+  }
+
+  .menu-items.active {
+    display: flex;
+  }
 }
 
-
- .logo{
-    width: 150px;
-    height: 150px;
+.menu{
+  text-decoration: none;
+  font-weight: bold;
+  font-family: Times New Roman, serif;
+  font-size: clamp(1rem, 2.5vw, 1.3rem);
+  color:#00561b;
+  transition: color 0.3s ease;
 }
-.entete{
+@media (min-width: 992px) {
+  .menu {
+    font-size: 1.5rem; 
+  }
+}
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.col {
+    flex: 1 1 50%;
+    padding: 0;
+}
+
+.banners2 {
+    background-image: url('images/demande.jpg');
+    background-size: cover;
+    background-position: center;
+    min-height: 100vh;
+    position: relative;
     display: flex;
     align-items: center;
-    list-style: none;
-    gap: 20px;
-
-}
-.menu{
-    text-decoration: none;
-    font-weight: bold;
-    font-family: Times New Roman, serif;
-    font-size: 22px;
-    color:#00561b;
-    margin-left:40px;
-}
-.menu:hover{
-    color:#ff7f00;
-}
-.logo-footer{
-    width: 100px;
-    height: 100px;
-    border-radius: 100px;
-    margin-left: 150px;
-}
-.col{
-    margin-left: 40px;
-    margin-top: 5px;
+    justify-content: center;
 }
 
-.col,ul{
-  padding-left: 60px;
-}
-
-.texte-footer{
-    font-size: 14px;
-    color: white;
-}
-H4{
-    font-size: 20px;
-    color: #00561b;
-    font-weight: bold;
-}
-.p-footer{
-    color: white;
-    margin-left: -10px;
-}
-.footer-menu{
-    color: white;
-    text-decoration: none;    
-} 
-
-body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-}
-
-footer {
-  background-color: #ff7f00;
-  color: white;
-}
-
-.footer-main {
-  display: flex;
-  justify-content: space-between;
-  padding: 30px 60px;
-  flex-wrap: wrap;
-}
-
-.footer-col {
-  flex: 1 1 250px;
-  margin: 10px;
-}
-
-.logo-footer {
-  width: 80px;
-  height: auto;
-  margin-bottom: 15px;
- 
-}
-
-
-.texte-footer {
-  font-size: 14px;
-  line-height: 1.6;
-}
-
-.footer-col h4 {
-  margin-bottom: 10px;
-  font-size: 16px;
-  text-transform: uppercase;
-}
-
-.footer-col a {
-  display: block;
-  color: white;
-  text-decoration: none;
-  margin: 5px 0;
-}
-
-.footer-col a:hover {
-  text-decoration: underline;
-}
-
-.socials img {
-  width: 24px;
-  margin-right: 10px;
-}
-.footer-bottom{
-    text-align: center;
-    margin-top: auto;
-}
-
-
-.demande{
-    display: flex;
-    width: 100%;
-}
-
-.aide1{
-width:50%;
-
-}
-.aide2{
-    width: 50%;
-    background-color: #00561b;
-}
-input,select{
-    width: 500px;
-    height: 40px;
-    border-radius: 60px;
-    margin-left: 80px;
-    padding-left: 20px;
-    font-family: 'Times New Roman', Times, serif;
-    border: none !important;
-}
-select {
-    color: gray;
-}
-select:valid {
-    color: black;
-}
-input:-webkit-autofill,
-textarea:-webkit-autofill,
-select:-webkit-autofill {
-    box-shadow: 0 0 0px 1000px white inset !important;
-    -webkit-box-shadow: 0 0 0px 1000px white inset !important;
-    -webkit-text-fill-color: rgb(254, 253, 253) !important;
-    transition: background-color 5000s ease-in-out 0s;
-}
-p{
-    margin-left: 80px;
-    color: rgb(244, 240, 240);
-    font-family:'Times New Roman', Times, serif  
-}
-textarea{
-    border-radius: 20px;
-    margin-left: 80px; 
-    width: 500px;
-    height: 150px;
-    padding-left: 20px; 
-}
-.donner{
-    width: 150px;
-    margin-left: 420px;
-    padding-left: 8px;
-    background-color: #ff7f00;
-    color: #00561b;
-}
-.aide1{
-    position: relative;
-      width: 50%;
-      max-width: 100%;
-}
-.aide1 img{
-    width: 100%;
-    height: auto;
-    display: block;
-}
-.dernier{
+.overla {
     position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(255, 165, 0, 0.5); 
-      color: white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 2em;
-      font-family:'Times New Roman', Times, serif;
-      text-align: center;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 94, 0, 0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 20px;
+    color: white;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 1.8rem;
 }
-::placeholder{
-    font-family:'Times New Roman', Times, serif;
+
+.content p {
+    max-width: 700px;
+    line-height: 1.5;
+    font-size: 10px;
+    
 }
+
+.aide2 {
+    background-color: #00561b;
+    padding: 30px 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+
+form {
+    width: 90%;
+    margin: 0 auto;
+}
+
+label {
+    color: white;
+    display: block;
+    
+    font-size: 1rem;
+    margin-left: 5px;
+}
+
 label.required::after {
     content: " *";
     color: red;
 }
-label{
-  color: white;
-  padding-left: 80px;
+
+input, textarea, select {
+    width: 100%;
+    padding: 5px;
+    border-radius: 30px;
+    border: none;
+    margin-bottom: 10px;
+    font-family: 'Times New Roman', Times, serif;
 }
+select{
+  color: gray;
+  height: 35px;
+}
+select:valid{
+  color: black;
+}
+textarea {
+    border-radius: 15px;
+    height: 120px;
+}
+
+.donner {
+    width: 150px;
+    padding: 8px;
+    background-color: #ff7f00;
+    color: #00561b;
+    border: none;
+    border-radius: 30px;
+    display: block;
+    margin: 8px auto;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.donner:hover {
+    background-color: #ffa733;
+}
+
 #merciMessage{
    display: none; 
     color: black;
    background-color:#c7e8f4;
-    /* padding: 10px;  */
-    /* border-radius: 5px; */
-      text-align: center; 
+   text-align: center; 
       
 }
-form label{
-  padding-top: 15px;
+
+/* Responsive Tablette */
+@media screen and (max-width: 992px) {
+    .col {
+        flex: 1 1 100%;
+    }
+    .banners2 {
+        min-height: 100vh;
+    }
+    .overla {
+        font-size: 1.4rem;
+        padding: 15px;
+    }form {
+        width: 95%;
+    }
 }
+
+/* Responsive Mobile */
+@media screen and (max-width: 576px) {
+    @media screen and (max-width: 576px) {
+    .banners2 {
+        min-height: 100vh;
+    }
+    .overla {
+        font-size: 1.1rem;
+        padding: 10px;
+    }
+    textarea {
+        height: 50px;
+    }
+    .donner {
+        width: 70%;
+    }
+    .aide2 {
+    background-color: #00561b;
+    padding: 15px 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+    
+  }}
