--- a/Nosprojets.css
+++ b/Nosprojets.css
@@ -202,9 +202,24 @@ body {
     }
 
 
-.intro-text{
+.intro-text {
   text-align: center;
+  margin: 0 auto;               /* Centre horizontalement le bloc */
+  padding: 0 10px;              /* Petite marge intérieure à gauche/droite */
+  width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
 }
+.container,
+.container-fluid,
+.row {
+  margin: 0 !important;
+  padding: 0 !important;
+  width: 100% !important;
+  max-width: 100% !important;
+  box-sizing: border-box;
+}
+
 
 .project-card .card-img-top {
   border-radius: 45px 45px 0 0;
@@ -215,12 +230,13 @@ body {
 }
 
 .project-card .card-body {
-  background-color: rgba(0, 86, 27, 0.9); /* Vert foncé avec 80% d'opacité */
+  background-color: rgba(0, 86, 27, 0.43); /* Vert foncé avec transparence */
   border-radius: 0 0 45px 45px;
-  color: white;
+  color: black;
   text-align: center;
-  opacity: 0.7;
+  /* opacity supprimée */
 }
+
 
 
 .project-card .btn-warning {
@@ -263,7 +279,7 @@ body {
   color: white;
   border-radius: 0;
    font-size: 45px;
-    opacity: 0.7;
+
 }
 
 .taille-uniforme {
@@ -341,9 +357,10 @@ body {
 }
 
 .green-title {
-  font-size: 1.8rem;
+  font-size: 1.9rem;
   font-weight: bold;
   margin-bottom: 15px;
+  color: #00561b;
 }
 
 .green-text {
