--- a/demande-aide.css
+++ b/demande-aide.css
@@ -97,11 +97,14 @@ img {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+    align-items: stretch; 
 }
 
 .col {
     flex: 1 1 50%;
     padding: 0;
+    display: flex;
+    flex-direction: column;     
 }
 
 .banners2 {
@@ -109,19 +112,22 @@ img {
     background-size: cover;
     background-position: center;
     min-height: 100vh;
+    width: 100%;
+    height: 100%;
+    flex: 1;
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.overla {
+.overlas {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 94, 0, 0.7);
+    background-color: rgba(255,165,0,0.5);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -129,13 +135,13 @@ img {
     padding: 20px;
     color: white;
     font-family: 'Times New Roman', Times, serif;
-    font-size: 1.8rem;
+      
 }
 
-.content p {
+.contents p {
     max-width: 700px;
     line-height: 1.5;
-    font-size: 10px;
+    font-size: 1.7rem; 
     
 }
 
@@ -145,6 +151,10 @@ img {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    flex: 1;
+    height: 100%;
+   min-height: 100vh;
+  box-sizing: border-box;   
 }
 
 
@@ -168,7 +178,8 @@ label.required::after {
 
 input, textarea, select {
     width: 100%;
-    padding: 5px;
+    padding: 3px;
+    padding-left: 18px;
     border-radius: 30px;
     border: none;
     margin-bottom: 10px;
@@ -176,7 +187,7 @@ input, textarea, select {
 }
 select{
   color: gray;
-  height: 35px;
+  height: 34px;
 }
 select:valid{
   color: black;
@@ -210,6 +221,14 @@ textarea {
    text-align: center; 
       
 }
+input:-webkit-autofill,
+textarea:-webkit-autofill,
+select:-webkit-autofill {
+    box-shadow: 0 0 0 1000px white inset !important;
+    -webkit-box-shadow: 0 0 0 1000px white inset !important;
+    -webkit-text-fill-color: black !important;
+}
+
 
 /* Responsive Tablette */
 @media screen and (max-width: 992px) {
@@ -219,12 +238,18 @@ textarea {
     .banners2 {
         min-height: 100vh;
     }
-    .overla {
+    .overlas {
         font-size: 1.4rem;
         padding: 15px;
     }form {
         width: 95%;
     }
+    .contents p {
+    max-width: 700px;
+    line-height: 1.8;
+    font-size: 1.4rem; 
+    
+}
 }
 
 /* Responsive Mobile */
@@ -233,7 +258,7 @@ textarea {
     .banners2 {
         min-height: 100vh;
     }
-    .overla {
+    .overlas {
         font-size: 1.1rem;
         padding: 10px;
     }
@@ -249,6 +274,14 @@ textarea {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    
 }
+.contents p {
+    max-width: 700px;
+    line-height: 1.2;
+    text-align: left;
+    letter-spacing: normal;
+    font-size: 1.3rem;}
+    
     
   }}
