--- a/demande-aide.css
+++ b/demande-aide.css
@@ -178,6 +178,7 @@ label.required::after {
 
 input, textarea, select {
     width: 100%;
+    height: 31px;
     padding: 3px;
     padding-left: 18px;
     border-radius: 30px;
@@ -187,7 +188,7 @@ input, textarea, select {
 }
 select{
   color: gray;
-  height: 34px;
+
 }
 select:valid{
   color: black;
@@ -208,6 +209,7 @@ textarea {
     margin: 8px auto;
     cursor: pointer;
     font-weight: bold;
+    padding-bottom: 30px;
 }
 
 .donner:hover {
